fixed error in readme

--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://wclarkcito.github.io/employee-directory"
+  "homepage": "https://wclarkcito.github.io/employee-directory/"
 }
